test for set autoSizingColumn